Prevent clicking on a tooltip from freezing the UI by ensuring that hidden views can't capture mouse events.  b=156764  r=roc  sr=jag  a=asa